objects/Case_Deflection__c.object
<CustomObject>
    <fields>
        <fullName>Category_Name__c</fullName>
        <label>Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Deflections</relationshipLabel>
        <relationshipName>Case_Deflections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deflection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deflection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Page Unload</fullName>
                </value>
                <value>
                    <fullName>Button Click</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lanyon_Migrated_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lanyon Migrated ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Deflections</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Deflection</label>
    <nameField>
        <displayFormat>CD-{00000000}</displayFormat>
        <label>Case Deflection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Deflections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Product_Enhancements_Case_Deflection</fullName>
        <filterScope>Queue</filterScope>
        <label>Product Enhancements</label>
        <queue>Product_Enhancements</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>